2019-04-11  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c: Support Cortex-M4 (not touching FPU).

2019-04-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/clk_gpio_init-stm32f.c: Rename from clk_gpio_init-stm32.c.

	* entry.c: Use STM32F10X_HD.
	* board/board-stbee.h (STM32F10X_HD): Add.
	* board/board-stm32-primer2.h (STM32F10X_HD): Add.

2019-04-09  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_block_sendrecv): Support
	busy-wait when timeout_block_p == 0.

2019-04-08  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_block_sendrecv): New.
	(usart_init0): New.

2019-03-30  Niibe Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config_brr): New.
	(usart_config_re): New internal function.
	(handle_intr, handle_tx_ready): Use TC for smartcard.
	(usart_wait_write_completion): New internal function.
	(usart_write): Support half-duplex smartcard mode.

2019-03-29  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_read_ext): New.
	(usart_read_prepare_poll): New.

2019-03-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.14.
	* doc/chopstx.texi (VERSION): 1.14.

2019-03-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config): Fix SCEN setting
	procedure.

2019-03-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config): Support parity error
	interrupt setting.
	(usart_init): Don't call usart_config here.
	* example-usb-serial/sample.c: It's application calling
	usart_config.

2019-02-28  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (BSCARD): New.
	* contrib/usart-stm32f103.c (BSCARD): Baudrate for smartcard.
	(usart_config_clken): New.
	(usart_config): Fix for MODE_SMARTCARD.

	* board/board-st-nucleo-f103.h: Define pins for smartcard
	interface.

2019-02-21  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (MODE_SMARTCARD, MODE_IRDA, MODE_IRDA_LP)
	(MASK_MODE): New.

	* contrib/usart-stm32f103.c (usart_config): Add support for