@@ -1,3 +1,7 @@
+2019-04-12  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* entry.c [__ARM_ARCH_7EM__] (entry): Fix for Cortex-M4.
+
 2019-04-11  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* chopstx-cortex-m.c: Support Cortex-M4 (not touching FPU).
